--- a/MDK-ARM/OSC_STM32F407/OSC_STM32F407.build_log.htm
+++ b/MDK-ARM/OSC_STM32F407/OSC_STM32F407.build_log.htm
@@ -27,11 +27,17 @@ Project File Date:  07/24/2016
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'OSC_STM32F407'
-compiling main.c...
+compiling LCD_ILI9325_Touch.c...
+compiling LCD_ILI9325.c...
+..\HARDWARE\LCD_ILI9325\LCD_ILI9325.c(153): warning:  #177-D: variable "g" was declared but never referenced
+  	u16 r = 0, g = 0, b = 0;
+..\HARDWARE\LCD_ILI9325\LCD_ILI9325.c(153): warning:  #177-D: variable "b" was declared but never referenced
+  	u16 r = 0, g = 0, b = 0;
+..\HARDWARE\LCD_ILI9325\LCD_ILI9325.c: 2 warnings, 0 errors
 linking...
 Program Size: Code=96420 RO-data=22940 RW-data=2396 ZI-data=45492  
 FromELF: creating hex file...
-"OSC_STM32F407\OSC_STM32F407.axf" - 0 Error(s), 0 Warning(s).
+"OSC_STM32F407\OSC_STM32F407.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -49,7 +55,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
